Fix - remove border when scrolling nav on mobile

--- a/client/src/components/navigation/Navigation.scss
+++ b/client/src/components/navigation/Navigation.scss
@@ -94,7 +94,7 @@ $border-bottom: 1px solid $ghost;
   }
 
   &-list {
-    position: fixed;
+    position: absolute;
     overflow: hidden;
     height: 100%;
     width: 100%;
